# rdk-bluetooth

./: CONTRIBUTING.md  Makefile.am  NOTICE  btr.h  configure.ac
include/: btr.h  btrCore.h  btrCoreTypes.h  btrCore_avMedia.h  btrCore_dbusBluez.h  btrCore_le.h  btrCore_priv.h  btrCore_service.h  btr_service.h
include/bt-ifce/: btrCore_bt_ifce.h
include/dbus-bt/: btrCore_dbus_bt.h
include/logger/: btrCore_logger.h
include/priv/: btrCore_priv.h
src/: Makefile.am  btrCore.c  btrCore_avMedia.c  btrCore_dbusBluez.c  btrCore_le.c  btr_core.c
src/bt-ifce/: btrCore_dbus_bluez4.c  btrCore_dbus_bluez5.c
src/dbus-bt/: btrCore_dbus_bt.c
tests/: Makefile.am  btrCore_test.c  btr_test.c
